--- a/Boxy/Run.ipynb
+++ b/Boxy/Run.ipynb
@@ -6,14 +6,9 @@
    "source": [
     "To Do:\n",
     "\n",
-    "\n",
-    "Add bellyflop functionality\n",
-    "\n",
     "Add bounce boxes (metal/wood, one class that adds a shape of an arrow, and that's it, rest will be handled outside)\n",
     "\n",
     "Add Tnt destruct sequence\n",
-    "\n",
-    "Add destruct animations\n",
     "\n",
     "Add protection box (and following sprite?)\n",
     "\n",
@@ -29,14 +24,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/Sam/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:230: DeprecationWarning: In future, it will be an error for 'np.bool_' scalars to be interpreted as an index\n"
+      "/Users/Sam/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:296: DeprecationWarning: In future, it will be an error for 'np.bool_' scalars to be interpreted as an index\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-27-835f2872a749>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m    382\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    383\u001b[0m   \u001b[0;31m#  sleep(0.1)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 384\u001b[0;31m     \u001b[0mpygame\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdisplay\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mflip\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    385\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    386\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
@@ -48,7 +54,7 @@
     "import math\n",
     "import Box\n",
     "import numpy as np\n",
-    "from Super_Classes import Vector, Body, Shape\n",
+    "from Super_Classes import Vector, Body, Shape, Looper\n",
     "import Platform\n",
     "from random import randint\n",
     "import copy\n",
@@ -56,6 +62,61 @@
     "from Constants import G, box_size, S\n",
     "from time import sleep\n",
     "from Make_Sounds import wood_bounce_sound, wood_break_sound, boom_sound\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "# Assigns all boxes a 'resting_on' platform or box based on what is below them\n",
+    "def settle_boxes(body_list):\n",
+    "    \n",
+    "    body_list = sorted(body_list,key = lambda x: x.pos[0]) # sort by x position\n",
+    "    \n",
+    "    for bod in body_list: # move all boxes (not resting on something) down slightly to find overlaps\n",
+    "        if isinstance(bod,Box.Box) and not isinstance(bod.resting_on,Body):\n",
+    "            bod.pos[1] += 1.0\n",
+    "            \n",
+    "    boxes_settling = True\n",
+    "    while boxes_settling:\n",
+    "        boxes_settling = False\n",
+    "\n",
+    "        for bod in body_list: # move all boxes down slightly to find overlaps\n",
+    "            if isinstance(bod,Box.Box) and not isinstance(bod.resting_on,Body):\n",
+    "                for bod2 in body_list:\n",
+    "                    if bod2.pos[1]>bod.pos[1]: # bod 2 is below\n",
+    "                        boxes_settling = boxes_settling or resolve_fall(bod,bod2)\n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    for bod in body_list:\n",
+    "        if isinstance(bod,Platform.Platform) and not isinstance(bod,Looper): # find a nearby stationary point\n",
+    "            rest_body = bod\n",
+    "        if isinstance(bod,Box.Box) and not isinstance(bod.resting_on,Body):\n",
+    "            bod.pos[1] -= 1.0\n",
+    "            bod.is_on(rest_body)\n",
+    "            \n",
+    "                    \n",
+    "                    \n",
+    "def resolve_fall(bod,bod2):\n",
+    "    if bod2.solid and bod2.pos[1]>bod.pos[1]: # bod 2 is below and solid\n",
+    "        dim,gap = bod.overlap_dim(bod2)\n",
+    "        if dim == 1 and gap>0.1:# bod2 is overlapping vertically\n",
+    "            bod.is_on(bod2)\n",
+    "            bod.pos[1] -= gap #shift bod up!\n",
+    "            return True # solved!\n",
+    "    return False\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
     "\n",
     "\n",
     "display_size = (1000,600)\n",
@@ -86,18 +147,18 @@
     "\n",
     "a = Box.Nitro(p1.pos - [-box_size*100/30,p1.size[1]+box_size])\n",
     "a1 = Box.Metal(a.pos - [0,box_size*2])\n",
-    "a1.is_on(a)\n",
-    "a3 = Box.Metal_Wood(a.pos - [box_size*2,box_size*2])\n",
-    "a3.is_off()\n",
+    "\n",
     "a2 = Box.Nitro(a.pos - [box_size*2,0])\n",
-    "a2.is_off()\n",
+    "a3 = Box.Metal_Wood(a.pos - [box_size*2,box_size*2])\n",
+    "\n",
+    "\n",
     "\n",
     "b2 = Box.Tnt(path[int(N/2)]-[0,box_size+d1.size[1]])\n",
-    "b2.is_on(d2)\n",
+    "\n",
     "b3 = Box.Bouncey_Wood(path[int(N/2)]-[0,box_size*3+d1.size[1]])\n",
-    "b3.is_on(d2)\n",
+    "\n",
     "b4 = Box.Wood(path[int(N/2)]-[0,box_size*5+d1.size[1]])\n",
-    "b4.is_on(d2)\n",
+    "\n",
     "#b1 = Box.Nitro(path[0]-[0,a.size[1]+d2.size[1]])\n",
     "#b1.is_on(d1)\n",
     "#b4 = Box.Nitro(path[0]-[0,a.size[1]+d2.size[1]+a.size[1]*2])\n",
@@ -118,6 +179,11 @@
     "\n",
     "shifts = [np.array([randint(-10,10)/5,randint(-10,10)/5]) for _ in range(5)]\n",
     "shifts.append(np.array([0,0]))\n",
+    "\n",
+    "     \n",
+    "\n",
+    "settle_boxes(master_body_list)\n",
+    "        \n",
     "\n",
     "\n",
     "crashed = False     \n",
@@ -212,6 +278,12 @@
     "    # Move every object including the player\n",
     "    for bod in body_list:\n",
     "        bod.move()\n",
+    "        if isinstance(bod,Box.Box) and bod.vel[1] >0:\n",
+    "            for bod2 in body_list:\n",
+    "                if resolve_fall(bod,bod2):\n",
+    "                    if not isinstance(bod2,Box.Box) or bod2.vel[1] == 0:\n",
+    "                        bod.vel[1] = 0\n",
+    "                        break\n",
     "    \n",
     "    if not crashed:\n",
     "        # determine character's state and velocity\n",
@@ -219,7 +291,7 @@
     "\n",
     "        character.move()\n",
     "        squeeze = [[False,False],[False,False]]\n",
-    "\n",
+    "        \n",
     "        # sort body_list so that closest bodies interact first. \n",
     "        # this prevents incorrect interactions like diagonally breaking boxes\n",
     "        body_list = sorted(body_list, key= lambda x: sum((character.pos-x.pos)**2), reverse=False)\n",
@@ -238,14 +310,14 @@
     "                if dim>-1: # overlap!\n",
     "                   # print(dim)\n",
     "                    side = 2*(character.pos[dim] > i.pos[dim]) - 1\n",
-    "                    converging = character.vel[dim]*side < 0 # if character is moving towards object\n",
+    "                    converging = (character.vel[dim]-i.vel[dim])*side < 0 # if character is moving towards object\n",
     "\n",
     "\n",
     "                    if isinstance(i,Box.Wood):\n",
     "                        bounce = (dim == 1) and converging and (not hit)\n",
     "                        if bounce:\n",
     "                            i.bounces -=1\n",
-    "                        break_box = (bounce and i.bounces == 0) or hit\n",
+    "                        break_box = (bounce and i.bounces == 0) or hit \n",
     "                        if bounce and not break_box:\n",
     "                            wood_bounce_sound()\n",
     "\n",
@@ -270,7 +342,8 @@
     "\n",
     "\n",
     "                    if not break_box:  # record squeeze, remove overlap, reduce velocity in this dimension to 0\n",
-    "                        squeeze[dim][(character.pos[dim] > i.pos[dim])] = True\n",
+    "                        squeeze[dim][(character.pos[dim] > i.pos[dim])] = i\n",
+    "                       \n",
     "                        character.pos[dim] += side*gap\n",
     "                        if converging: \n",
     "                            character.vel[dim] = 0.0\n",
@@ -366,21 +439,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'master_body_list' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-1-20e2992710e7>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mx\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m2\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mmaster_body_list\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mon_me\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mmaster_body_list\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'master_body_list' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "x = 2\n",
     "master_body_list[x].on_me,master_body_list[x]"
