--- a/Boxy/Run.ipynb
+++ b/Boxy/Run.ipynb
@@ -10,29 +10,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "pygame 1.9.6\n",
-      "Hello from the pygame community. https://www.pygame.org/contribute.html\n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-1-ecfd87e29e42>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m    103\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    104\u001b[0m   \u001b[0;31m#  sleep(0.1) # turned on for debugging\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 105\u001b[0;31m     \u001b[0mpygame\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdisplay\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mupdate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    106\u001b[0m     \u001b[0mclock\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtick\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m45\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    107\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pygame\n",
     "\n",
@@ -54,6 +34,7 @@
     "\n",
     "# Initialize game\n",
     "gameDisplay = pygame.display.set_mode(display_size)\n",
+    "gameDisplay.set_alpha(None)\n",
     "pygame.display.set_caption('Boxy!')\n",
     "sky = (205, 230, 247)\n",
     "clock = pygame.time.Clock()\n",
@@ -135,11 +116,12 @@
     "    screen.pos = np.array([character.pos[0]-display_size[0]/2,0])\n",
     "   \n",
     "    # move all non-corporeal objects to the foreground, draw all bodies, and clean foreground list of dead objects\n",
-    "    level.draw_level(gameDisplay,screen,character)\n",
+    "    rect_list = level.draw_level(gameDisplay,screen,character)\n",
     "\n",
     "  #  sleep(0.1) # turned on for debugging\n",
-    "    pygame.display.update()\n",
-    "    clock.tick(45)\n",
+    "    pygame.display.update(rect_list) \n",
+    "    # note that in my system this rect_list does not prevent pygame from updating the entire screen...\n",
+    "    clock.tick(35)\n",
     "\n",
     "##############################################################################\n",
     "    \n",
@@ -158,6 +140,8 @@
    "metadata": {},
    "source": [
     "To Do:\n",
+    "\n",
+    "sounds for character touching down\n",
     "\n",
     "Add spring boxes (metal/wood, one class that adds a shape of an arrow, and that's it, rest will be handled outside)\n",
     "\n",
@@ -195,6 +179,18 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
