--- a/Boxy/Run.ipynb
+++ b/Boxy/Run.ipynb
@@ -12,16 +12,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "pygame 1.9.6\n",
-      "Hello from the pygame community. https://www.pygame.org/contribute.html\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pygame\n",
     "\n",
@@ -32,7 +23,7 @@
     "#from time import sleep\n",
     "\n",
     "# Custom classes and functions\n",
-    "from Super_Classes import Body\n",
+    "from Super_Classes import Body, Shape\n",
     "from Status import Status\n",
     "from Player import Player\n",
     "from Constants import display_size\n",
@@ -48,11 +39,19 @@
     "clock = pygame.time.Clock()\n",
     "\n",
     "\n",
-    "# Object to determine what to draw on screen\n",
-    "screen = Body([0,0],display_size,corporeal=True,solid=False,velocity=[0,0])   \n",
+    "\n",
+    "#screen2 = Body(np.array(display_size)/2,np.array(display_size)/2,corporeal=True,solid=False,velocity=[0,0])   \n",
+    "#screen2.shapes = [Shape(screen.self_shape(),color = None,line_color = (0,0,0))]\n",
     "\n",
     "# Object holding all level Bodies and scenery\n",
     "level = Level(num=0) # right now level 0\n",
+    "\n",
+    "\n",
+    "# Object to determine what to draw on screen (anything non overlapping isn't drawn)\n",
+    "screen = Body([level.player_start[0],display_size[1]/2],np.array(display_size)/2,corporeal=True,solid=False,velocity=[0,0])   \n",
+    "\n",
+    "\n",
+    "#level.background_list.append(screen2)\n",
     "\n",
     "death_delay = 60 # time after player's death that the level keeps tickin'\n",
     "crashed = death_delay # start with a completed crash cycle to initalize everything\n",
@@ -65,7 +64,7 @@
     "##############################################################################\n",
     "    # Handle player death and level reset\n",
     "    \n",
-    "    if crashed or not screen.overlap(character): # player off screen = dead!\n",
+    "    if crashed or character.pos[1]>(1.5*display_size[1]): # player off screen = dead!\n",
     "        if crashed == death_delay:\n",
     "            character = Player(level.player_start)\n",
     "            crashed = 0\n",
@@ -121,7 +120,7 @@
     "\n",
     "    # fill display with sky color and set center position for screen (only overlapping objects will draw)\n",
     "    gameDisplay.fill(sky)\n",
-    "    screen.pos = np.array([character.pos[0]-display_size[0]/2,0])\n",
+    "    screen.pos = np.array([character.pos[0],display_size[1]/2]) # location of the center of the screen\n",
     "   \n",
     "    # move all non-corporeal objects to the foreground, draw all bodies, and clean foreground list of dead objects\n",
     "    level.draw_level(gameDisplay,screen,character)\n",
@@ -172,6 +171,13 @@
     "“Sound effects obtained from zapsplat.com and freesound.org\"\n",
     "\"Idea inspired by but unrelated to Crash Bandicoot\"\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
