--- a/Boxy/Run.ipynb
+++ b/Boxy/Run.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -19,17 +19,6 @@
      "text": [
       "pygame 1.9.6\n",
       "Hello from the pygame community. https://www.pygame.org/contribute.html\n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-1-77faaacdb0f1>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m    111\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    112\u001b[0m   \u001b[0;31m#  sleep(0.1) # turned on for debugging\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 113\u001b[0;31m     \u001b[0mpygame\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdisplay\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mupdate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    114\u001b[0m     \u001b[0mclock\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtick\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m35\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    115\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
@@ -107,10 +96,10 @@
     "        crashed = 1\n",
     "\n",
     "##############################################################################    \n",
-    "    # Move every non-player object and resolve their interactions\n",
+    "    # Move every non-player object and resolve their interactions, including explosions\n",
     "    \n",
     "    level.move_objects()\n",
-    "    \n",
+    "    level.explosions(character) # these can also affect character\n",
     "\n",
     "##############################################################################\n",
     "    # [if player is alive] Evolve its state, move it, and resolve interactions with other bodies\n",
@@ -127,14 +116,14 @@
     "       # squeeze = [[False,False],[False,False]]\n",
     "     \n",
     "        # all objects interact with the player (destroy boxes, get fruit, land on platforms, etc)\n",
-    "        for i in level.box_list+level.platform_list+level.gettable_list:\n",
-    "            i.interact(character)\n",
+    "        level.interact(character)\n",
     "            \n",
     "        # some of these interactions might have killed ya. Then ya dead!\n",
     "        if character.protection < 0:\n",
     "            crashed = 1\n",
     "        \n",
-    "        \n",
+    "\n",
+    "    \n",
     "##############################################################################\n",
     "    # Prepare canvas and draw visuals\n",
     "\n",
@@ -169,7 +158,7 @@
     "\n",
     "Add spring boxes (metal/wood, one class that adds a shape of an arrow, and that's it, rest will be handled outside)\n",
     "\n",
-    "Add boom_box interactions with surrounding boxes/fruit (destroy them, no fruit gained)\n",
+    "Add life boxes\n",
     "\n",
     "Level saving\n",
     "\n",
@@ -177,15 +166,15 @@
     "\n",
     "Bad guys!\n",
     "\n",
-    "Edit sound files so they start quicker (doing this in finder made them unloadable)\n",
+    "add gettable lives and gettable protectors\n",
     "\n",
-    "fruit flies towards counters at the top when grabbed\n",
+    "fruit and lives fly towards counters at the top when grabbed\n",
     "\n",
     "### Squeezing is not currently configured at all (to kill player) (is this needed?)\n",
     "#### Definitely need to fix: currently, falling non-breakable boxes do not kill player\n",
     "\n",
     "Known bugs:\n",
-    "falling stacks of boxes ON a moving platform results in slight overlap (but nothing functionally problematic)\n",
+    "can touch nitro diagonally when in contact with two boxes its touching (is this an issue?)\n",
     "\n",
     "Credits:\n",
     "“Sound effects obtained from zapsplat.com and freesound.org\"\n",
@@ -212,6 +201,18 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
